--- a/package.json
+++ b/package.json
@@ -3,23 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.6",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
+    "grommet": "^2.17.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
+    "turndown": "^7.1.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "./script/build.sh",
-    "test": "react-scripts test",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +35,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@textile/hub": "^6.3.0",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.6",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "react-app-rewired": "^2.1.8"
   }
 }
