add douban: status note topic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "prettier.jsxSingleQuote": false,
   "prettier.semi": false,
   "prettier.singleQuote": true,
+  "editor.tabSize": 2,
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
