--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.1.10",
     "@textile/hub": "^6.3.0",
     "@types/jest": "^26.0.15",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.21.4",
     "grommet": "^2.17.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -24,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false craco build && cp public/turndown.js build/static/js/turndown.js",
+    "build": "INLINE_RUNTIME_CHUNK=false craco build && cp public/turndown.js build/static/js/turndown.js && cp public/ark.css build/static/css/ark.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
