--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hello Extensions",
+  "name": "方舟",
   "description": "Base Level Extension",
   "version": "1.0",
   "manifest_version": 2,
@@ -18,12 +18,14 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.douban.com/*"],
+      "matches": ["https://*.douban.com/*", "https://mp.weixin.qq.com/*"],
       "js": ["./static/js/turndown.js", "./static/js/content.js"],
+      "css": ["./static/css/ark.css"],
       "all_frames": false,
       "run_at": "document_end"
     }
   ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": ["activeTab"],
   "optional_permissions": ["<all_urls>"]
 }
